# mtt_pathTracingRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  testUT.py
include/: BVH.h  BoundingBox.h  Intersection.h  Material.h  MeshTriangle.h  ModelTransformation.h  OBJ_Loader.hpp  Object.h  Ray.h  Renderer.h  Scene.h  Sphere.h  Triangle.h  utility.hpp
src/: BVH.cpp  BoundingBox.cpp  Intersection.cpp  Material.cpp  MeshTriangle.cpp  ModelTransformation.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp  main.cpp
src/test/: BoundingBox_TestSuite.cpp  Intersection_TestSuite.cpp  Object_TestSuite.cpp  Ray_TestSuite.cpp  Renderer_TestSuite.cpp  Scene_TestSuite.cpp
